--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/ecmastack.css">
 
